[package]
name = "albumify-ng"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Telegram bot that bundles forwarded media into albums (media groups)."
license = "MIT"
repository = "https://github.com/Nachtalb/albumify-ng"
readme = "README.md"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "sync"] }
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
